Keywords and Tests for DemoApp

--- a/outputdir/log.html
+++ b/outputdir/log.html
@@ -1750,31 +1750,31 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,285,4],[],[[5,0,1,6,[7],[0,285,0,8],[]]],[[1,9,10,0,11,0,0,0,[0,285,0],[[0,9,10,0,11,12,0,0,[0,285,0],[],[[285,5,13]]]],[]],[2,14,15,0,16,0,0,0,[1,285,0],[],[]]],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,30853],[],[[4,0,1,5,[6],[1,14226,14254],[[0,7,8,0,9,10,11,0,[1,14229,0],[],[[14229,2,12]]],[0,13,14,0,15,16,0,0,[1,14230,923],[[0,17,18,0,19,20,0,0,[1,14230,265],[],[[14232,2,21]]],[0,22,18,0,23,24,0,0,[1,14496,656],[],[[14496,2,25]]]],[]],[0,7,8,0,9,10,11,0,[1,15153,1],[],[[15154,2,26]]],[0,7,8,0,9,27,28,0,[1,15154,1],[],[[15154,2,29]]],[0,7,8,0,9,27,30,0,[1,15155,1],[],[[15155,2,31]]],[0,32,14,0,0,33,0,0,[1,15156,1920],[[0,17,18,0,19,34,0,0,[1,15157,1696],[],[[15157,2,35]]],[0,17,18,0,19,36,0,0,[1,16853,223],[],[[16853,2,37]]]],[]],[0,38,14,0,0,39,0,0,[1,17076,315],[[0,17,18,0,19,40,0,0,[1,17077,314],[],[[17077,2,41]]]],[]],[0,42,43,0,44,45,46,0,[1,17393,1],[],[[17394,2,47]]],[0,7,8,0,9,48,49,0,[1,17394,1],[],[[17395,2,50]]],[0,7,8,0,9,51,52,0,[1,17396,2],[],[[17397,2,53]]],[0,54,14,0,0,55,0,0,[1,17398,10940],[[0,17,18,0,19,56,0,0,[1,17400,221],[],[[17401,2,57]]],[0,17,18,0,19,58,0,0,[1,17621,219],[],[[17621,2,59]]],[0,22,18,0,23,60,0,0,[1,17841,675],[],[[17841,2,61]]],[0,22,18,0,23,62,0,0,[1,18516,647],[],[[18517,2,63]]],[0,17,18,0,19,64,0,0,[1,19163,3860],[],[[19164,2,65]]],[0,17,18,0,19,66,0,0,[1,23024,529],[],[[23025,2,67]]],[0,22,18,0,23,68,0,0,[1,23553,4784],[],[[23554,2,69]]]],[]],[0,70,18,0,71,72,0,0,[1,28340,138],[],[[28341,2,73]]]]]],[[1,74,14,0,75,0,0,0,[1,301,13925],[[0,76,18,0,77,78,0,0,[1,301,13925],[],[[303,2,79]]]],[]],[2,80,18,0,81,0,0,0,[1,28489,2363],[],[]]],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Order Payment","*C:\\Users\\User\\IdeaProjects\\DemoApplication\\Tests\\order_payment.robot","*../Tests/order_payment.robot","*Suite setup failed:\nKeyword 'order_payment.Open Browser' expected 0 arguments, got 2.","*Verify ordering and payment method","*<p>order\x3c/p>","*OrderPayment","*Parent suite setup failed:\nKeyword 'order_payment.Open Browser' expected 0 arguments, got 2.","*Open Browser","*order_payment","*<p>Opens browser to login page\x3c/p>","*${URL}, browser=${BROWSER}","*Keyword 'order_payment.Open Browser' expected 0 arguments, got 2.","*Close Browser","*ExtendedSelenium2Library","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*User Registration","*C:\\AtlantDemo\\DemoApplication\\Tests\\user_registration.robot","*../Tests/user_registration.robot","*Verify user registration","*<p>New user registration\x3c/p>","*NewUser","*Generate Random String","*String","*<p>Generates a string with a desired <code>length\x3c/code> from the given <code>chars\x3c/code>.\x3c/p>","*8, [LOWER]","*${RANDOM}","*${RANDOM} = jgykhsvc","*Generate random Email:","*user_registration","*<p>Generates random Email\x3c/p>","*${RANDOM}@gmail.com","*Input Text","*ExtendedSelenium2Library","*<p>Types the given `text` into text field identified by `locator`.\x3c/p>","*${IN_EMAIL}, ${EMAIL}","*Typing text 'jgykhsvc@gmail.com' into text field 'id=email_create'","*Click Element","*<p>Clicks an element identified by <code>locator\x3c/code>.\x3c/p>","*${CREATE_BTN}","*Clicking element 'id=SubmitCreate'.","*${RANDOM} = abfetowc","*8, [LETTERS]","*${FIRSTNAME}","*${FIRSTNAME} = qHHqjSVc","*${LASTNAME}","*${LASTNAME} = KoXsJtUv","*Input firstname and lastname:","*${FIRSTNAME}, ${LASTNAME}","*${IN_FIRSTNAME}, ${FIRSTNAME}","*Typing text 'qHHqjSVc' into text field 'id=customer_firstname'","*${IN_LASTNAME}, ${LASTNAME}","*Typing text 'KoXsJtUv' into text field 'id=customer_lastname'","*Input password:","*${PASSWORD}","*${IN_PASSWORD}, ${PASSWORD}","*Typing text 'mystore1234' into text field 'id=passwd'","*Evaluate","*BuiltIn","*<p>Evaluates the given expression in Python and returns the result.\x3c/p>","*random.choice(@{STATE_LIST})","*${STATE}","*${STATE} = Oregon","*5, [NUMBERS]","*${CODE}","*${CODE} = 28598","*9, [NUMBERS]","*${PHONE}","*${PHONE} = 589089924","*Set address:","*Trg, Sarajevo, ${STATE}, ${CODE}, ${PHONE}","*${IN_ADDRESS}, ${ADDRESS}","*Typing text 'Trg' into text field 'id=address1'","*${IN_CITY}, ${CITY}","*Typing text 'Sarajevo' into text field 'id=city'","*${IN_STATE}","*Clicking element 'id=id_state'.","*//*[@id=\"id_state\"]//option[text()=\"${STATE}\"]","*Clicking element '//*[@id=\"id_state\"]//option[text()=\"Oregon\"]'.","*${IN_CODE}, ${CODE}","*Typing text '28598' into text field 'id=postcode'","*${IN_PHONE}, ${PHONE}","*Typing text '589089924' into text field 'id=phone_mobile'","*${REGISTER_BTN}","*Clicking element 'id=submitAccount'.","*Element Should Be Visible","*<p>Verifies that the element identified by `locator` is visible.\x3c/p>","*${LOGOUT_BTN}, Sign out","*Verifying element 'css=.logout' is visible.","*Open Browser to registration page","*<p>Opens browser to login page\x3c/p>","*Open Browser","*<p>Opens a new browser instance to given URL.\x3c/p>","*${URL}, browser=${BROWSER}","eNq1zMENwjAMAMBVrD7Ii+YPTRmBGVxjSERiR64rYHsqduB/umtnKfKAxfS1skGgbNo4gCssuDJsViFMCNn4nobs3k8x4uba0ItKNyQvxCNpi0Vu/B577hdScdNa2dJuM8tufv6ArZ8XpGdqnyMS6SY+zH9pp4hz+AKGb1Ph","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0}],[{"elapsed":"00:00:00","fail":1,"label":"OrderPayment","pass":0}],[{"elapsed":"00:00:00","fail":1,"id":"s1","label":"Order Payment","name":"Order Payment","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:14","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:14","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:00:14","fail":0,"label":"NewUser","pass":1}],[{"elapsed":"00:00:31","fail":0,"id":"s1","label":"User Registration","name":"User Registration","pass":1}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1617875233427;
+window.output["baseMillis"] = 1617908912374;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 301;
+window.output["generated"] = 30910;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"FAIL","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
