--- a/outputdir/report.html
+++ b/outputdir/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,285,4],[],[[5,0,1,6,[7],[0,285,0,8],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,30853],[],[[4,0,1,5,[6],[1,14226,14254],[]]],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Order Payment","*C:\\Users\\User\\IdeaProjects\\DemoApplication\\Tests\\order_payment.robot","*../Tests/order_payment.robot","*Suite setup failed:\nKeyword 'order_payment.Open Browser' expected 0 arguments, got 2.","*Verify ordering and payment method","*<p>order\x3c/p>","*OrderPayment","*Parent suite setup failed:\nKeyword 'order_payment.Open Browser' expected 0 arguments, got 2."]);
+window.output["strings"] = window.output["strings"].concat(["*","*User Registration","*C:\\AtlantDemo\\DemoApplication\\Tests\\user_registration.robot","*../Tests/user_registration.robot","*Verify user registration","*<p>New user registration\x3c/p>","*NewUser"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0}],[{"elapsed":"00:00:00","fail":1,"label":"OrderPayment","pass":0}],[{"elapsed":"00:00:00","fail":1,"id":"s1","label":"Order Payment","name":"Order Payment","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:14","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:14","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:00:14","fail":0,"label":"NewUser","pass":1}],[{"elapsed":"00:00:31","fail":0,"id":"s1","label":"User Registration","name":"User Registration","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1617875233427;
+window.output["baseMillis"] = 1617908912374;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 301;
+window.output["generated"] = 30910;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
